# uuid

./: .env.local  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_CN.md  Taskfile.yml  pixi.toml  skills-lock.json
.pi/skills/mojo-gpu-fundamentals/: SKILL.md
examples/: main.mojo
examples/try-uuid/: .gitignore  pixi.toml
examples/try-uuid/src/: main.mojo
recipes/: mojo-recipe.yaml  rs-recipe.yaml
tests/: test_debug.mojo  test_new_api.mojo  test_uuid.mojo
uuid/: __init__.mojo  ffi.mojo
uuid-ffi/: Cargo.toml  Taskfile.yml  cffi.h  main.c  py.cffi  readme.md
uuid-ffi/examples/: v4.rs  v7.rs
uuid-ffi/src/: ffi.rs  lib.rs
