[workspace]
resolver = "2"

# TODO X: rattler-build not support workspace
members = [
    "packages/uuid-gen"
]

exclude = [
    "tmp", # 不需要 ** 子目录
    "packages/uuid-ffi/core",
]



################################################################################
# release options:
#
# ref:
#   - https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
#   - https://github.com/tikv/tikv/blob/master/Cargo.toml#L307
#
################################################################################

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
